--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i18n-pro/vue",
-  "version": "vdoc",
+  "version": "doc",
   "description": "Lightweight, simple, flexible, automatic translation internationalization tool for Vue（适用于 Vue 的轻量、简单、灵活、自动翻译的国际化工具）",
   "keywords": [
     "vue",
