--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i18n-pro/vue",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Lightweight, simple, flexible, automatic translation internationalization tool for Vue（适用于 Vue 的轻量、简单、灵活、自动翻译的国际化工具）",
   "keywords": [
     "vue",
@@ -33,7 +33,7 @@
     "build": "rimraf dist/src && rollup -c",
     "publish": "npm run build && npm publish --access=public --registry https://registry.npmjs.org",
     "docs": "jtm run",
-    "docs-translate": "i18n t -P docs/src"
+    "docs-i18n": "i18n t -P docs/src"
   },
   "author": "Eyelly Wu",
   "license": "MIT",
@@ -67,7 +67,7 @@
     "vitest": "^0.28.5"
   },
   "peerDependencies": {
-    "i18n-pro": ">=2.0.0",
+    "i18n-pro": ">=2.0.0 <3.0.0",
     "vue": ">=3.2.25"
   },
   "dependencies": {
