--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@i18n-pro/vue",
-  "version": "1.1.1",
-  "description": "Lightweight, simple, flexible, automatic translation internationalization tool for Vue（适用于 Vue 的轻量、简单、灵活、自动翻译的国际化工具）",
+  "version": "2.0.0-alpha.0",
+  "description": "An out-of-the-box, lightweight i18n auto-translation solution for Vue",
   "keywords": [
     "vue",
     "i18n",
@@ -67,11 +67,11 @@
     "vitest": "^0.28.5"
   },
   "peerDependencies": {
-    "i18n-pro": ">=2.0.0 <3.0.0",
+    "i18n-pro": ">=3.0.0 <4.0.0",
     "vue": ">=3.2.25"
   },
   "dependencies": {
-    "i18n-pro": "2.0.0",
+    "i18n-pro": "3.0.0-alpha.2",
     "vue": "^3.2.25"
   },
   "lint-staged": {
